# goit-pycore-hw-05

./: logs_parser.py  main.py  pyproject.toml  task1.py  task2.py
decorators/: __init__.py
